Friday - I got stuck!

--- a/tractor/src/app/app.component.html
+++ b/tractor/src/app/app.component.html
@@ -5,6 +5,9 @@
 
   <nav>
     <a [routerLink]="['']">Seznam traktorů</a>
+    <a [routerLink]="['stk']">STKů</a>
+    <a [routerLink]="['clients']">Klienti</a>
+    <a [routerLink]="['lendings']">Pôžičky</a>
     <a [routerLink]="['about']">O půjčovně</a>
   </nav>
 
