--- a/tractor/src/app/tractor-list/tractor-list.component.html
+++ b/tractor/src/app/tractor-list/tractor-list.component.html
@@ -25,8 +25,8 @@
       </form>
     </div>
     <div class="panel-footer">
-      <button type="button" class="btn btn-warning" (click)="showNewCarForm=false">Zavřít</button>
-      <button type="submit" class="btn btn-primary" (click)="createNewCar()">Ulož</button>
+      <button md-button type="button" class="btn btn-warning" (click)="showNewCarForm=false">Zavřít</button>
+      <button md-button type="submit" class="btn btn-primary" (click)="createNewCar()">Ulož</button>
     </div>
   </div>
 
