--- a/tractor/src/app/app.component.html
+++ b/tractor/src/app/app.component.html
@@ -4,8 +4,8 @@
   <h1>{{title}}</h1>
 
   <nav>
-    <a [routerLink]="['']">Seznam traktorů</a>
-    <a [routerLink]="['stk']">STKů</a>
+    <a [routerLink]="['']">Traktory</a>
+    <a [routerLink]="['stk']">STK</a>
     <a [routerLink]="['clients']">Klienti</a>
     <a [routerLink]="['lendings']">Pôžičky</a>
     <a [routerLink]="['about']">O půjčovně</a>
