--- a/tractor/src/app/app.component.scss
+++ b/tractor/src/app/app.component.scss
@@ -3,30 +3,33 @@
   display: block;
 }
 
-header {
-  background-color: #fff;
-  padding: 16px;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.5);
-  height: 170px;
-  background-image: url("img/traktor.jpg");
-  background-repeat: no-repeat;
-  background-position: right;
+// header {
+//   background-color: #fff;
+//   padding: 16px;
+//   position: fixed;
+//   top: 0;
+//   left: 0;
+//   width: 100%;
+//   box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.5);
+//   height: 170px;
+//   background-image: url("img/traktor.jpg");
+//   background-repeat: no-repeat;
+//   background-position: right;
+// }
+
+md-toolbar{
+  background-color:#E82F3A;
 }
 
-main {
-  padding: 1em;
-  text-align: left;
-  margin-top: 180px;
-  display: block;
-}
+// nav {
+//   font-size: 140%;
+//   a{
+//     margin: 0.5em;
+//   }
+// }
 
-nav {
-  font-size: 140%;
-  a{
-    margin: 0.5em;
-  }
+
+
+.mat-button {
+  color: #ffffff;
 }
