--- a/tractor/src/style/app.scss
+++ b/tractor/src/style/app.scss
@@ -2,15 +2,6 @@
 @import "~bootstrap-sass/assets/stylesheets/_bootstrap-sprockets.scss";
 @import "~bootstrap-sass/assets/stylesheets/_bootstrap";
 
-
-body {
-  background: #ffffff;
-  color: #222222;
-}
-
-
-
-
 @import '~@angular/material/core/theming/all-theme';
 // Plus imports for other components in your app.
 
@@ -21,8 +12,8 @@ body {
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue.
-$candy-app-primary: mat-palette($mat-indigo);
-$candy-app-accent:  mat-palette($mat-pink, A200, A100, A400);
+$candy-app-primary: mat-palette($mat-red);
+$candy-app-accent:  mat-palette($mat-red, A200, A100, A400);
 
 // The warn palette is optional (defaults to red).
 $candy-app-warn:    mat-palette($mat-red);
@@ -36,16 +27,37 @@ $candy-app-theme: mat-light-theme($candy-app-primary, $candy-app-accent, $candy-
 @include angular-material-theme($candy-app-theme);
 
 
-.mat-button {
-  color: #ffffff;
+body {
+  background-color:#EDF1F5;
+  font-family: Roboto,"Helvetica Neue",sans-serif;
+  color: #222222;
 }
-.btn-primary {
+
+main {
+  padding: 1em;
+  text-align: left;
+  // margin-top: 180px;
+  display: block;
+}
+
+h2 {
+  padding: 0 0 10px 0;
+  margin: 0;
+}
+
+
+.btn-primary, .btn-default {
   background: #009688;
   color: #ffffff;
 }
 .btn-warning {
-  background: #dd0031;
+  background-color:#E82F3A;
+  border-color: #E82F3A;
   color: #ffffff;
 }
-
+.btn-warning:hover {
+  background-color:#E82F3A;
+  border-color: #E82F3A;
+  color: #ffffff;
+}
 
