--- a/tractor/src/app/client-list/client-list.component.html
+++ b/tractor/src/app/client-list/client-list.component.html
@@ -30,7 +30,7 @@
           <input type="text" class="form-control" formControlName="clientPhone" id="phone">
         </div>
         <input type="hidden" name="clientDateOfRegistraion" value="clientDateOfRegistraion">
-        <input type="hidden" id="id" formControlName="id">
+        <input type="hidden" id="id" formControlName="id" value="{{id}}">
       </form>
     </div>
     <div class="panel-footer">
