--- a/tractor/src/app/app.component.html
+++ b/tractor/src/app/app.component.html
@@ -2,7 +2,7 @@
   <button md-button [routerLink]="['']">Vozový park</button>
   <button md-button [routerLink]="['clients']">Klienti</button>
   <!--<button md-button [routerLink]="['stk']">STK</button>-->
-  <!--<button md-button [routerLink]="['lendings']">Pôžičky</button>-->
+  <button md-button [routerLink]="['lendings']">Pôžičky</button>
   <!--<button md-button [routerLink]="['about']">O půjčovně</button>-->
 </md-toolbar>
 
