--- a/tractor/src/app/new-lending/new-lending.component.html
+++ b/tractor/src/app/new-lending/new-lending.component.html
@@ -41,9 +41,34 @@
         <div class="form-group" >
           <button type="button" class="btn btn-primary" (click)="searchAvailableVehicle()" *ngIf="!availableVehicleList">availableVehicleList</button>
           <label for="vin" *ngIf="availableVehicleList">VIN</label>
-          <select class="form-control" *ngIf="availableVehicleList">
-            <option *ngFor="let vinItem of availableVehicleList" value="{{vinItem.id}}" id="client">{{vinItem.vin}}</option>
+          <select class="form-control" *ngIf="availableVehicleList" formControlName="car">
+            <option *ngFor="let vinItem of availableVehicleList" value="{{vinItem.carId}}" id="vin" >{{vinItem.vin}}</option>
           </select>
+        </div>
+
+        <div class="form-group" *ngIf="availableVehicleList">
+          <label for="client">Klient</label>
+          <select class="form-control" formControlName="client">
+            <option *ngFor="let client of clientList" value="{{client.id}}" id="client">{{client.clientName}}</option>
+          </select>
+        </div>
+
+        <div class="form-group" *ngIf="availableVehicleList">
+          <label for="price">Cena</label>
+          <input type="text" class="form-control" formControlName="price" id="price">
+        </div>
+
+        <div class="form-group" *ngIf="availableVehicleList">
+          <label for="lattitude">Lattitude</label>
+          <input type="text" class="form-control" formControlName="lattitude" id="lattitude">
+        </div>
+        <div class="form-group" *ngIf="availableVehicleList">
+          <label for="longitude">Longitude</label>
+          <input type="text" class="form-control" formControlName="longitude" id="longitude">
+        </div>
+
+        <div class="form-group" *ngIf="availableVehicleList">
+          <button type="button" class="btn btn-primary" (click)="createNewLending()">Ulož</button>
         </div>
 
       </form>
